<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_airplay_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nowplay"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nowplay" />
        <item
            android:id="@+id/upcom"
            android:icon="@drawable/ic_movie_filter_black_24dp"
            android:title="@string/upcom" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search"/>
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favorite"/>

    </group>



</menu>
