<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Adapter.DetailMovie">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="154dp"
            android:layout_height="231dp"
            android:src="@drawable/poster"
            android:transitionName="poster"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_title_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/movietitle"
                android:textStyle="bold"
                android:textSize="14dp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rating"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_rating_detaill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="6,5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/release_date"/>
            <TextView
                android:id="@+id/tv_release_date_detaill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="2018-01-09"/>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_detail"
                android:layout_margin="16dp"
                android:src="@drawable/ic_star_black_24dp"
                android:backgroundTint="@android:color/white"/>
            <TextView
                android:id="@+id/over"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/overv"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_overview_detaill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/over"
                android:text="selamat"
                android:textStyle="bold"/>
        </LinearLayout>



        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>